# libtoncar

./: .bazelrc  .clangd  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  build.bash  justfile  run.bash  setup.bash
bazel/: cc_defs.bzl  copts.bzl
bazel/gba_platform/: transition.bzl
example/: BUILD.bazel  main.cpp
example/assets/gfx/: BUILD.bazel  example.ase
libtoncar/: BUILD.bazel
libtoncar/core/: BUILD.bazel  background_vram.h  charblock.h  colors.h  gba-assert.cpp  gba-assert.h  interrupt_manager.cpp  interrupt_manager.h  oam.h  object_vram.h  palram.h  panic.cpp  panic.h  screen.h  sprite.h  toncar.h  vram.h  zone.h
libtoncar/core/asm/: .clangd  BUILD.bazel  attributes.h  bios.h  interrupt.cpp  interrupt.h  memset.h
libtoncar/core/asm/internal/: .clangd  BUILD.bazel  bios.s  bios_ex.s  clr_fade_fast.s  isr_master.s
libtoncar/core/background/: background.h  background_vram.h
libtoncar/core/mgba/: logger.cpp  logger.h
libtoncar/core/oam/: object_vram.h
libtoncar/core/registers/: attribute.h  background.h  display.h  registers.h
libtoncar/gfx_converter/: BUILD.bazel  Cargo.toml  gfx_convert.bzl
libtoncar/gfx_converter/src/: aseprite.rs  codegen.rs  color.rs  error.rs  main.rs  sprite.cpp.j2  sprite.h.j2  sprite.rs
platform/: BUILD.bazel  cc_toolchain_config.bzl  devkitarm.bazel  gba.specs  libtonc.bazel  repo.bzl  transition.bzl
source/: BUILD.bazel  main.c
src/: BUILD.bazel  main.cpp  toncar.h
src/libtoncar/: BUILD.bazel  attributes.h  colors.h  interrupt_manager.cpp  interrupt_manager.h  panic.cpp  panic.h  registers.h  screen.h  toncar.cpp  toncar.h
src/libtoncar/asm/: .clangd  BUILD.bazel  asm.h  bios.h  clr_blend_fast.s  interrupt.cpp  interrupt.h  memcpy.h  memcpy.s  memset.h
src/libtoncar/asm/internal/: BUILD.bazel  README.md  isr_master.s  isr_nest.s  memset.s
src/libtoncar/mgba/: logger.cpp  logger.h
src/libtoncar/registers/: display.h  registers.h
src/mgba-debug/: BUILD.bazel  gba_types.h  mgba.c  mgba.h
tools/clangd/: gen_clang_tidy.sh
tools/generate_compile_commands/: BUILD.bazel
tools/gfx_converter/: BUILD.bazel
tools/makerom/: BUILD.bazel
tools/mgba/: BUILD.bazel  mgba_wrapper.sh
tools/romimage/: BUILD.bazel
