module(
    name = "gba_example",
    version = "0.0.1",
)

# --------------------------------------------------------------------------------------------------
# MARK: BCR Dependencies
#
# These dependencies come from the Bazel Central Registry (aka BCR, https://registry.bazel.build),
# or from overrides below.

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_go", version = "0.60.0")

# --------------------------------------------------------------------------------------------------
# MARK: Toolchains

register_toolchains(
    "//platform:toolchain",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

# --------------------------------------------------------------------------------------------------
# MARK: devkitARM

devkitarm = use_extension("//platform:repo.bzl", "devkitarm_ext")
use_repo(devkitarm, "devkitarm")

# Gets 403 forbidden because the server requests user agents which cannot be injected through bazel.
# We thus use new_local_repository instead.
# http_archive(
#     name = "devkitarm_crtls",
#     build_file = "@//platform:devkitarm_crtls.bazel",
#     sha256 = "65faf10f62c219a1a8a3a182b0c4c56da7992599035ea32b3d79e39e79f964bb",
#     strip_prefix = "opt/devkitpro/devkitARM/arm-none-eabi/lib",
#     urls = devkitarm_urls("devkitarm-crtls-1.2.6-1-any.pkg.tar.zst"),
# )
# Requires user to run ./setup.bash beforehand
new_local_repository(
    name = "devkitarm_crtls",
    build_file = "@//platform:devkitarm_crtls.bazel",
    path = "deps/installed/devkitarm-crtls-1.2.6-1",
)

# Gets 403 forbidden because the server requests user agents which cannot be injected through bazel.
# We thus use new_local_repository instead.
# http_archive(
#     name = "libgba",
#     build_file = "@//platform:libgba.bazel",
#     sha256 = "64d2a274ea7c1a9f7705a75cf3b0b937678fb0b10c468eb6b37ce00e3fbb6125",
#     strip_prefix = "opt/devkitpro/libgba",
#     urls = devkitarm_urls("libgba-0.5.4-1-any.pkg.tar.zst"),
# )
# Requires user to run ./setup.bash beforehand
new_local_repository(
    name = "libgba",
    build_file = "@//platform:libgba.bazel",
    path = "deps/installed/libgba-0.5.4-1",
)

# --------------------------------------------------------------------------------------------------
# MARK: libtonc

http_archive(
    name = "libtonc",
    build_file = "@//platform:libtonc.bazel",
    sha256 = "d326c1b2b982f1375ff8c9118f463e75af8fccdd23916d7e98b1a3bbfbcffac0",
    strip_prefix = "libtonc-1.4.5",
    urls = ["https://github.com/devkitPro/libtonc/archive/refs/tags/v1.4.5.tar.gz"],
)
