load("//bazel:copts.bzl", "CXXOPTS")
load("//platform:defs.bzl", "gba_rom")
load("//platform:transition.bzl", "gba_binary")

gba_binary(
    name = "game.elf",
    srcs = ["main.cpp"],
    additional_linker_inputs = ["@//platform:gba_specs"],
    copts = CXXOPTS,
    linkopts = ["-specs=$(location @//platform:gba_specs)"],
    visibility = ["//examples:__pkg__"],
    deps = [
        "//example/assets/gfx:example_sprites",
        "//libtoncar",
    ],
)

gba_rom(
    name = "game",
    program = ":game.elf",
    visibility = ["//tools/mgba:__pkg__"],
)
