load("//bazel:cc_defs.bzl", "gba_binary")
load("//bazel/gba_platform:defs.bzl", "gba_rom")

gba_binary(
    name = "game.elf",
    srcs = ["main.cpp"],
    additional_linker_inputs = ["@//bazel/gba_platform:gba_specs"],
    linkopts = ["-specs=$(location @//bazel/gba_platform:gba_specs)"],
    visibility = ["//examples:__pkg__"],
    deps = [
        "//example/assets/gfx:example_sprites",
        "//libtoncar",
    ],
)

gba_rom(
    name = "game",
    program = ":game.elf",
    visibility = ["//tools/mgba:__pkg__"],
)
