load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "CXXOPTS")
load("//platform:defs.bzl", "gba_rom")

cc_binary(
    name = "game.elf",
    srcs = ["main.cpp"],
    copts = CXXOPTS,
    deps = [
        # You should only keep one of these two guys.
        "@libgba",
        "@libtonc",
    ],
)

gba_rom(
    name = "game",
    program = ":game.elf",
    visibility = ["//tools/mgba:__pkg__"],
)
