load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("//bazel:copts.bzl", "CXXOPTS")
load("//platform:defs.bzl", "gba_rom")

cc_library(
    name = "gamelib",
    srcs = [],
    hdrs = ["toncar.h"],
    copts = CXXOPTS,
)

cc_binary(
    name = "game.elf",
    srcs = ["main.cpp"],
    additional_linker_inputs = ["@//platform:gba_specs"],
    copts = CXXOPTS,
    linkopts = ["-specs=$(location @//platform:gba_specs)"],
    deps = [
        "//src:gamelib",
        "@libtonc",
    ],
)

gba_rom(
    name = "game",
    program = ":game.elf",
    visibility = ["//tools/mgba:__pkg__"],
)
