load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "CXXOPTS")

cc_library(
    name = "core",
    srcs = [
        "interrupt_manager.cpp",
        "mgba/logger.cpp",
        "panic.cpp",
    ],
    hdrs = [
        "attributes.h",
        "colors.h",
        "interrupt_manager.h",
        "mgba/logger.h",
        "palram.h",
        "panic.h",
        "registers/display.h",
        "registers/registers.h",
        "screen.h",
        "sprite.h",
        "toncar.h",
        "vram.h",
        "zone.h",
    ],
    copts = CXXOPTS,
    include_prefix = "libtoncar",
    includes = ["."],
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = ["//libtoncar/core/asm"],
)
