load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "CXXOPTS")

cc_library(
    name = "core",
    srcs = [
        "gba-assert.cpp",
        "interrupt_manager.cpp",
        "mgba/logger.cpp",
    ],
    hdrs = [
        "attributes.h",
        "background/background.h",
        "background/background_vram.h",
        "colors.h",
        "gba-assert.h",
        "interrupt_manager.h",
        "mgba/logger.h",
        "oam/oam.h",
        "oam/object_vram.h",
        "palram.h",
        "registers/attribute.h",
        "registers/display.h",
        "registers/registers.h",
        "screen.h",
        "sprite.h",
        "toncar.h",
        "zone.h",
    ],
    copts = CXXOPTS,
    include_prefix = "libtoncar",
    includes = ["."],
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = ["//libtoncar/core/asm"],
)
