load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "CXXOPTS")

cc_library(
    name = "libtoncar",
    srcs = [
        "panic.cpp",
    ],
    hdrs = [
        "colors.h",
        "panic.h",
        "registers.h",
        "screen.h",
        "toncar.h",
    ],
    copts = CXXOPTS,
    visibility = ["//visibility:public"],
)
