load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "CXXOPTS")

cc_library(
    name = "libtoncar",
    srcs = [
        "mgba/logger.cpp",
        "panic.cpp",
    ],
    hdrs = [
        "colors.h",
        "mgba/logger.h",
        "panic.h",
        "registers/display.h",
        "registers/registers.h",
        "screen.h",
        "toncar.h",
    ],
    copts = CXXOPTS,
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = ["//src/mgba-debug"],
)
