load("//platform:transition.bzl", "gba_library")

# Exposes the ASM implemented functions.
gba_library(
    name = "asm",
    srcs = ["interrupt.cpp"],
    hdrs = [
        "attributes.h",
        "bios.h",
        "interrupt.h",
        "memcpy.h",
        "memset.h",
    ],
    include_prefix = "libtoncar/asm",
    visibility = [
        "//libtoncar/core:__pkg__",
    ],
    deps = ["//libtoncar/core/asm/internal"],
)
